[package]
name = "blueayachan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "Commands"
#path = "src/commands.rs"


[dependencies]
anyhow = "1.0.63"
chrono = "0.4.23"
csv = "1.1.6"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
pest = "2.0"
pest_derive = "2.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
twitch-irc = "4.0.0"